adding some new strings related to random sorting

--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -222,6 +222,8 @@
     <string name="title">Başlıq</string>
     <string name="filename">Fayl adı</string>
     <string name="extension">Fayl çıxışı</string>
+    <string name="random">Random</string>
+    <string name="sort_randomly">Sort randomly</string>
     <string name="ascending">Artan</string>
     <string name="descending">Azalan</string>
     <string name="use_for_this_folder">Yalnız bu qovluq üçün işlət</string>
