--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -222,6 +222,8 @@
     <string name="title">Τίτλο</string>
     <string name="filename">Όνομα αρχείου</string>
     <string name="extension">Επέκταση</string>
+    <string name="random">Random</string>
+    <string name="sort_randomly">Sort randomly</string>
     <string name="ascending">Αύξουσα</string>
     <string name="descending">Φθίνουσα</string>
     <string name="use_for_this_folder">Χρήση μόνο για αυτόν το φάκελο</string>
