--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -222,6 +222,8 @@
     <string name="title">Otsikko</string>
     <string name="filename">Tiedostonimi</string>
     <string name="extension">Extension</string>
+    <string name="random">Random</string>
+    <string name="sort_randomly">Sort randomly</string>
     <string name="ascending">Nouseva</string>
     <string name="descending">Laskeva</string>
     <string name="use_for_this_folder">Käytä vain tässä kansiossa</string>
