--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -222,6 +222,8 @@
     <string name="title">Title</string>
     <string name="filename">Filename</string>
     <string name="extension">Extension</string>
+    <string name="random">Random</string>
+    <string name="sort_randomly">Sort randomly</string>
     <string name="ascending">Ascending</string>
     <string name="descending">Descending</string>
     <string name="use_for_this_folder">Pakai Hanya Untuk Folder Ini</string>
