--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -222,6 +222,8 @@
     <string name="title">제목</string>
     <string name="filename">파일명</string>
     <string name="extension">파일종류</string>
+    <string name="random">Random</string>
+    <string name="sort_randomly">Sort randomly</string>
     <string name="ascending">오름차 순</string>
     <string name="descending">내림차 순</string>
     <string name="use_for_this_folder">현재 폴더만 적용</string>
