--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -222,6 +222,8 @@
     <string name="title">Tittel</string>
     <string name="filename">Filnavn</string>
     <string name="extension">Filendelse</string>
+    <string name="random">Random</string>
+    <string name="sort_randomly">Sort randomly</string>
     <string name="ascending">Stigende</string>
     <string name="descending">Fallende</string>
     <string name="use_for_this_folder">Bruk kun for denne mappen</string>
