--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -223,6 +223,8 @@
     <string name="title">Tytuł</string>
     <string name="filename">Nazwa pliku</string>
     <string name="extension">Rozszerzenie</string>
+    <string name="random">Random</string>
+    <string name="sort_randomly">Sort randomly</string>
     <string name="ascending">Rosnąco</string>
     <string name="descending">Malejąco</string>
     <string name="use_for_this_folder">Tylko w tym folderze</string>
