--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -225,6 +225,8 @@
     <string name="title">Názov</string>
     <string name="filename">Názov súboru</string>
     <string name="extension">Prípona</string>
+    <string name="random">Náhodne</string>
+    <string name="sort_randomly">Zoradiť náhodne</string>
     <string name="ascending">Vzostupne</string>
     <string name="descending">Klesajúco</string>
     <string name="use_for_this_folder">Použiť iba pre tento priečinok</string>
