--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -227,6 +227,8 @@
     <string name="title">Naslov</string>
     <string name="filename">Ime datoteke</string>
     <string name="extension">Datotečna končnica</string>
+    <string name="random">Random</string>
+    <string name="sort_randomly">Sort randomly</string>
     <string name="ascending">Zvišujoče</string>
     <string name="descending">Znižajoče</string>
     <string name="use_for_this_folder">Uporabi le za to mapo</string>
