--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -19,8 +19,8 @@
     <string name="none">Cap</string>
     <string name="label">Etiqueta</string>
     <string name="transparent">Transparent</string>
-    <string name="transparent_color">Transparent color</string>
-    <string name="select_a_different_color">Select a different color</string>
+    <string name="transparent_color">Color transparent</string>
+    <string name="select_a_different_color">Selecciona un color diferent</string>
 
     <!-- Favorites -->
     <string name="favorites">Preferits</string>
