--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -18,9 +18,9 @@
     <string name="deleting_folder">Eliminando carpeta \'%s\'</string>
     <string name="none">Ninguno</string>
     <string name="label">Etiqueta</string>
-    <string name="transparent">Transparent</string>
-    <string name="transparent_color">Transparent color</string>
-    <string name="select_a_different_color">Select a different color</string>
+    <string name="transparent">Transparente</string>
+    <string name="transparent_color">Color transparente</string>
+    <string name="select_a_different_color">Seleccionar un color diferente</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoritos</string>
