--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -18,9 +18,9 @@
     <string name="deleting_folder">Map \'%s\' verwijderen</string>
     <string name="none">Geen</string>
     <string name="label">Label</string>
-    <string name="transparent">Transparent</string>
-    <string name="transparent_color">Transparent color</string>
-    <string name="select_a_different_color">Select a different color</string>
+    <string name="transparent">Transparant</string>
+    <string name="transparent_color">Transparante kleur</string>
+    <string name="select_a_different_color">Kies een andere kleur</string>
 
     <!-- Favorites -->
     <string name="favorites">Favorieten</string>
