--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -18,9 +18,9 @@
     <string name="deleting_folder">Удаление папки \"%s\"</string>
     <string name="none">Нет</string>
     <string name="label">Метка</string>
-    <string name="transparent">Transparent</string>
-    <string name="transparent_color">Transparent color</string>
-    <string name="select_a_different_color">Select a different color</string>
+    <string name="transparent">Прозрачный</string>
+    <string name="transparent_color">Прозрачный цвет</string>
+    <string name="select_a_different_color">Выберите другой цвет</string>
 
     <!-- Favorites -->
     <string name="favorites">Избранное</string>
@@ -225,8 +225,8 @@
     <string name="title">Название</string>
     <string name="filename">Имя файла</string>
     <string name="extension">Расширение</string>
-    <string name="random">Random</string>
-    <string name="sort_randomly">Sort randomly</string>
+    <string name="random">Случайно</string>
+    <string name="sort_randomly">Случайный порядок</string>
     <string name="ascending">По возрастанию</string>
     <string name="descending">По убыванию</string>
     <string name="use_for_this_folder">Использовать только для этой папки</string>
