--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -222,8 +222,8 @@
     <string name="title">Titel</string>
     <string name="filename">Bestandsnaam</string>
     <string name="extension">Extensie</string>
-    <string name="random">Random</string>
-    <string name="sort_randomly">Sort randomly</string>
+    <string name="random">Willekeurige volgorde</string>
+    <string name="sort_randomly">Willekeurige volgorde</string>
     <string name="ascending">Oplopend</string>
     <string name="descending">Aflopend</string>
     <string name="use_for_this_folder">Alleen voor deze map gebruiken</string>
