adding a new string for password protecting file deletion

--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -380,6 +380,7 @@
     <string name="extra_large">Ekstra stor</string>
     <string name="password_protect_hidden_items">Beskyt visning af skjulte elementer med en kode</string>
     <string name="password_protect_whole_app">Beskyt hele appen med en adgangskode</string>
+    <string name="password_protect_file_deletion">Password protect file deletion and moving</string>
     <string name="keep_last_modified">Kopi/flyt/omdøb skal ikke påvirke ændringstidspunktet</string>
     <string name="show_info_bubble">Vis en info-boble når jeg scroller med rullepanelet</string>
     <string name="prevent_phone_from_sleeping">Forhindr telefonen i at falde i søvn når appen er i forgrunden</string>
