--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -380,6 +380,7 @@
     <string name="extra_large">Erittäin suuri</string>
     <string name="password_protect_hidden_items">Suojaa piilotetut salasanalla</string>
     <string name="password_protect_whole_app">Suojaa koko sovellus salasanalla</string>
+    <string name="password_protect_file_deletion">Password protect file deletion and moving</string>
     <string name="keep_last_modified">Säilytä alkuperäinen "viimeksi muokattu" ajankohta tiedostoa siirtäessä, kopioitaessa ja uudelleennimettäessä</string>
     <string name="show_info_bubble">Näytä lisätietokupla vierityspalkista vierittäessä</string>
     <string name="prevent_phone_from_sleeping">Estä puhelinta siirtymästä virransäästöön kun sovellus on avattu ja käytössä</string>
