--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -387,9 +387,10 @@
     <string name="purchase_simple_thank_you">Kup aplikację \'Proste podziękowanie\'</string>
     <string name="customize_colors">Dostosuj kolory aplikacji</string>
     <string name="customize_widget_colors">Dostosuj kolory widżetu</string>
-    <string name="use_english_language">Wymuś używanie przez aplikację języka angielskiego</string>
-    <string name="avoid_whats_new">Nie pokazuj okna \'Co nowego\' po uruchomieniu aplikacji</string>
-    <string name="show_hidden_items">Pokazuj ukryte elementy</string>
+    <string name="use_english_language">Wymuś używanie przez aplikację języka angielskiego</string><![CDATA[
+    
+    ]]>
+    <string name="show_hidden_items">Pokazuj ukryte elementy</string>
     <string name="font_size">Rozmiar czcionki</string>
     <string name="small">Mała</string>
     <string name="medium">Średnia</string>
